# temporal-sdlc

./: .env.example  README.md  mcp_server.py  pyproject.toml  run_workflow.py  sdlc_workflow.py  worker.py
activities/: activities.py  deploy_helper.sh
data/: data_types.py
shared/: config.py
