[tool.poetry]
package-mode = false
name = "temporal-sdlc"
version = "0.1.0"
description = ""
authors = ["Laine Smith <lainecaseysmith@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
temporalio = "^1.13.0"
atlassian-python-api = "^4.0.0"
pygithub = "^2.6.1"
dotenv = "^0.9.9"
fastmcp = "^2.9.2"
uvicorn = "^0.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
